[gd_scene load_steps=9 format=2]

[ext_resource path="res://Levels/Level_0/Scripts/Enemies/Monborg.gd" type="Script" id=1]
[ext_resource path="res://Levels/Level_0/Assets/Enemies/Monborg/BodyMonborg.png" type="Texture" id=2]
[ext_resource path="res://Levels/Level_0/Assets/Enemies/Monborg/HandMonborg.png" type="Texture" id=3]
[ext_resource path="res://Levels/Level_0/Assets/Enemies/Monborg/GunMonborg.png" type="Texture" id=4]
[ext_resource path="res://Levels/Level_0/Assets/ComicEffects/11ComicEffects1.png" type="Texture" id=5]

[sub_resource type="Animation" id=1]
resource_name = "Default"
tracks/0/type = "value"
tracks/0/path = NodePath("KinematicBody2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("KinematicBody2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.862745, 0.341176, 0.341176, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Wham"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-005, 1e-005 ), Vector2( 2, 2 ), Vector2( 1e-005, 1e-005 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("KinematicBody2D")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "destroy_animation_mid"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}

[node name="Monborg" type="Node2D"]
position = Vector2( 660, 370 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
editor/display_folded = true
collision_layer = 4
collision_mask = 16
script = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="KinematicBody2D"]
polygon = PoolVector2Array( 23.2682, -53.3822, 42.0332, -33.9701, 41.7097, 56.9431, -20.0854, 57.2666, -21.056, 37.8545, -39.4974, 38.178, -38.5269, -8.41089, -24.6149, -8.08734, -24.6149, -30.7347, -1.96747, -55.3234 )

[node name="Area2D" type="Area2D" parent="KinematicBody2D"]
collision_layer = 4
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="KinematicBody2D/Area2D"]
polygon = PoolVector2Array( -27.7382, 55.8289, 47.5441, 56.5458, 42.1667, 47.5836, 41.4498, 23.9235, 46.4686, 8.15009, 46.4686, -18.3779, 41.0913, -37.7362, 27.4688, -53.1512, 15.2802, -56.736, 2.37469, -56.736, -14.1157, -47.7738, -20.9269, -38.0947, -27.7382, -33.4344, -31.6815, -29.1325, -28.8137, -22.6798, -25.5873, -21.6043, -24.8703, -13.7176, -35.6249, -8.3403, -39.5682, 14.2444, -46.3795, 19.9802, -46.738, 31.0933, -40.6437, 36.829, -22.3609, 37.546, -22.3609, 47.9421 )

[node name="BodySprites" type="Node2D" parent="KinematicBody2D"]

[node name="Body" type="Sprite" parent="KinematicBody2D/BodySprites"]
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 2 )

[node name="Hand" type="Sprite" parent="KinematicBody2D/BodySprites"]
position = Vector2( 31.6918, -3.26898 )
scale = Vector2( 0.4, 0.4 )
z_index = -1
texture = ExtResource( 3 )
centered = false
offset = Vector2( -2.76721, -34.0108 )

[node name="Gun" type="Sprite" parent="KinematicBody2D/BodySprites/Hand"]
position = Vector2( 201.921, -40.2615 )
texture = ExtResource( 4 )
offset = Vector2( -60, 30 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="KinematicBody2D"]

[node name="ShootTimer" type="Timer" parent="KinematicBody2D"]
wait_time = 3.0
autostart = true

[node name="HitAnimationPlayer" type="AnimationPlayer" parent="."]
anims/Default = SubResource( 1 )
anims/HitRedFlash = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 11.3761, 10.8072 )
scale = Vector2( 1e-005, 1e-005 )
texture = ExtResource( 5 )

[node name="HitAnimationPlayer2" type="AnimationPlayer" parent="."]
anims/Wham = SubResource( 3 )
[connection signal="screen_entered" from="KinematicBody2D/VisibilityNotifier2D" to="KinematicBody2D" method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="timeout" from="KinematicBody2D/ShootTimer" to="KinematicBody2D" method="_on_ShootTimer_timeout"]
